[gd_scene load_steps=9 format=3 uid="uid://hdeebi6v8i0e"]

[ext_resource type="Script" path="res://scripts/accept_reject.gd" id="1_25pam"]
[ext_resource type="Texture2D" uid="uid://l2vqut6gkg7c" path="res://assets/UI/accept_reject_interrogate_buttons.png" id="2_22oug"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v2vju"]
atlas = ExtResource("2_22oug")
region = Rect2(13, 234, 111, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_jol1q"]
atlas = ExtResource("2_22oug")
region = Rect2(253, 237, 114, 46)

[sub_resource type="Animation" id="Animation_yfn4g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1064, 259)]
}

[sub_resource type="Animation" id="Animation_k8etd"]
resource_name = "close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(756, 359), Vector2(800, 359), Vector2(850, 359), Vector2(900, 359), Vector2(950, 359), Vector2(1000, 359), Vector2(1064, 359)]
}

[sub_resource type="Animation" id="Animation_ubsu2"]
resource_name = "accept reject"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1064, 359), Vector2(1000, 359), Vector2(950, 359), Vector2(900, 359), Vector2(850, 359), Vector2(800, 359), Vector2(756, 359)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t2qky"]
_data = {
"RESET": SubResource("Animation_yfn4g"),
"close": SubResource("Animation_k8etd"),
"open": SubResource("Animation_ubsu2")
}

[node name="AcceptReject" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 756.0
offset_top = 359.0
offset_right = 27.0
offset_bottom = -185.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_25pam")

[node name="AcceptRejectInterrogateButtons" type="Sprite2D" parent="."]
position = Vector2(206.296, 55.75)
scale = Vector2(0.839449, 0.839449)
texture = ExtResource("2_22oug")
region_enabled = true
region_rect = Rect2(49, 112, 451, 109)
metadata/_edit_lock_ = true

[node name="accept" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 109.092
offset_top = 31.0
offset_right = 222.092
offset_bottom = 82.0
mouse_filter = 1
texture_normal = SubResource("AtlasTexture_v2vju")
metadata/_edit_lock_ = true

[node name="reject" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 240.092
offset_top = 33.0
offset_right = 354.092
offset_bottom = 79.0
mouse_filter = 1
texture_normal = SubResource("AtlasTexture_jol1q")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t2qky")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="accept" to="." method="_on_accept_mouse_entered"]
[connection signal="mouse_exited" from="accept" to="." method="_on_accept_mouse_exited"]
[connection signal="pressed" from="accept" to="." method="_on_accept_pressed"]
[connection signal="mouse_entered" from="reject" to="." method="_on_reject_mouse_entered"]
[connection signal="mouse_exited" from="reject" to="." method="_on_reject_mouse_exited"]
[connection signal="pressed" from="reject" to="." method="_on_reject_pressed"]
